[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Manor.tscn" type="PackedScene" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="ContextMenu" type="Node2D" parent="GUI"]

[node name="HighliteButton" type="Button" parent="GUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_bottom = 20.0
focus_mode = 0
text = "O"

[node name="ColorRect" type="ColorRect" parent="GUI"]
margin_top = 480.0
margin_right = 480.0
margin_bottom = 570.0
color = Color( 0.121569, 0.109804, 0.109804, 1 )

[node name="Terminal" type="RichTextLabel" parent="GUI"]
margin_left = 8.0
margin_top = 488.0
margin_right = 472.0
margin_bottom = 570.0
scroll_following = true

[node name="ViewportContainer" type="ViewportContainer" parent="."]
mouse_filter = 2

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 480, 480 )
handle_input_locally = false
hdr = false
usage = 0
render_target_update_mode = 3
physics_object_picking = true

[node name="Manor" parent="ViewportContainer/Viewport" instance=ExtResource( 2 )]

[connection signal="button_down" from="GUI/HighliteButton" to="." method="_on_HighliteButton_button_down"]
[connection signal="button_up" from="GUI/HighliteButton" to="." method="_on_HighliteButton_button_up"]
